# sync-cli

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  sync_to_remote.py
.github/workflows/: ci.yml
docs/: LEARN_BY_EXAMPLE.en.md  LEARN_BY_EXAMPLE.md  MIGRATION.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  usage.md
docs/codex/: PHASES.md  PROGRESS.md  PROGRESS_TEMPLATE.md
src/sync_remote/: __init__.py  cli.py  config.py  operations.py  self_update.py  ssh_config.py  transport.py
tests/: test_cli_init.py  test_commands.py  test_config.py  test_docs_consistency.py  test_help.py  test_packaging.py  test_self_update.py  test_ssh_config.py  test_transport.py  test_wrapper.py
